--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: html
 title: 'Home'
 ---
 <!DOCTYPE html>
-<html class="_prime_html" lang="en-US"><!-- path   : index.html -->
+<html class="_prime_layout" lang="en-US"><!-- path   : index.html -->
   <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -12,13 +12,14 @@ title: 'Home'
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3248"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.5726"/>
     <style>
-      ._logo,
+      ._header,
       ._nav { display:none !important }
       ._footer { margin-top:1rem !important }
       h1.hero { font-family: 'Arial',system-ui,sans-serif }
-      article .projects { padding-left: 0;list-style: inside }
+      article .projects { margin:1rem 0;padding-left: 0;list-style: inside }
+      article .projects li { margin-left:0 }
     </style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -26,7 +27,11 @@ title: 'Home'
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
-            <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+            <header class="_header">
+              <div class="_layout">
+                <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+              </div>
+            </header>
             <nav class="_nav">
               <div class="_layout">
                 <p><code>// nav</code></p>
@@ -34,26 +39,30 @@ title: 'Home'
               </div>
             </nav>
             <main class="_main">
-              <article class="_article _layout">
-                <h1 class="hero">🕊️ Dove is a theme development project.</h1>
-                <nav>
-                  <p><b>Home</b>
+              <article class="_article">
+                <div class="_layout">
+                  <h1>🕊️ Dove is a theme development project.</h1>
+                  <nav>
+                    <p style="margin:1rem 0"><b>Home</b>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/md">Markdown</a>
+<a href="/dove/pages">Pages</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/test">Test</a>
-                  </p>
-                </nav>
-                <hr class="thin border-gray-light"/>
-                <nav>
-                  <ul class="projects">
-                    <li><b>Core</b>
+<a href="/dove/posts">Posts</a>
+                    </p>
+                  </nav>
+                  <hr class="thin border-gray-light"/>
+                  <div class="flex" style="gap:3rem;margin:1rem auto 1rem auto">
+                    <div class="f">
+                      <h3>Markdown</h3>
+                      <nav>
+                        <ul class="projects">
+                          <li><b>Core</b>
 <i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
 <a href="/dove/core/preview.html">Preview</a>
 <a href="/dove/core/legacy.html">Legacy</a>
@@ -62,12 +71,12 @@ title: 'Home'
 <a href="/dove/core/">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
-                    </li>
-                    <li><b>Mallet</b>
+                          </li>
+                          <li><b>Mallet</b>
 <i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
 <a href="/dove/mallet/preview.html">Preview</a>
 <a href="/dove/mallet/legacy.html">Legacy</a>
@@ -76,12 +85,12 @@ title: 'Home'
 <a href="/dove/mallet/">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
-                    </li>
-                    <li><b>Nova</b>
+                          </li>
+                          <li><b>Nova</b>
 <i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
 <a href="/dove/nova/preview.html">Preview</a>
 <a href="/dove/nova/legacy.html">Legacy</a>
@@ -90,12 +99,12 @@ title: 'Home'
 <a href="/dove/nova/">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
-                    </li>
-                    <li><b>Prime</b>
+                          </li>
+                          <li><b>Prime</b>
 <i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
 <a href="/dove/prime/preview.html">Preview</a>
 <a href="/dove/prime/legacy.html">Legacy</a>
@@ -104,29 +113,89 @@ title: 'Home'
 <a href="/dove/prime/">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
-                    </li>
-                  </ul>
-                </nav>
-                <hr class="thin border-gray-light"/>
-                <pre class="scrollable highlight" style="max-height:213px"><b class="text-gray"># _config.pug</b>
-version      : 0.0.3
-revision     : 2511.03.3248
-title        : Dove
-description  : Dove is a theme development project.
-author       : Techie Joe
-year         : 2025
-base_url     : /dove
-home_url     : /dove
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                    <div class="f">
+                      <h3>Html</h3>
+                      <nav>
+                        <ul class="projects">
+                          <li><b>Core</b>
+<i class="_icon"><i class="isvg">
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
-lang         : en-US
-theme_color  : #222
-color_scheme : light dark
-ghost        : bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv
+<a href="/dove/core/preview.html">Preview</a>
+<a href="/dove/core/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
 
-google_analytics     : (undefined)
-cloudflare_analytics : (undefined)
+<a href="/dove/core/">Home</a>
+<a href="/dove/core/page.html">Page</a>
+<a href="/dove/core/404.html">404</a>
+                          </li>
+                          <li><b>Mallet</b>
+<i class="_icon"><i class="isvg">
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
 
-source_url   : https://github.com/techie-joe/dove</pre>
+<a href="/dove/mallet/preview.html">Preview</a>
+<a href="/dove/mallet/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/mallet/">Home</a>
+<a href="/dove/mallet/page.html">Page</a>
+<a href="/dove/mallet/404.html">404</a>
+                          </li>
+                          <li><b>Nova</b>
+<i class="_icon"><i class="isvg">
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
+
+<a href="/dove/nova/preview.html">Preview</a>
+<a href="/dove/nova/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/nova/">Home</a>
+<a href="/dove/nova/page.html">Page</a>
+<a href="/dove/nova/404.html">404</a>
+                          </li>
+                          <li><b>Prime</b>
+<i class="_icon"><i class="isvg">
+                                <svg viewBox="0 0 24 24">
+                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                                </svg></i></i>
+
+<a href="/dove/prime/preview.html">Preview</a>
+<a href="/dove/prime/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                  <hr class="thin border-gray-light"/>{% capture pages %}{% include pages.md %}{% endcapture %}{% capture posts %}{% include posts.md %}{% endcapture %}
+                  <div class="flex" style="gap:3rem;margin:1rem auto 1rem auto">
+                    <div class="f">
+                      <h3>Pages</h3>{{ pages | markdownify }}
+                    </div>
+                    <div class="f">
+                      <h3>Posts</h3>{{ posts | markdownify }}
+                    </div>
+                  </div>
+                  <h3>Configurations</h3>{% capture config %}{% include_relative config.md %}{% endcapture %}{{ config | markdownify }}
+                </div>
+              </article>
+            </main>
+            <footer class="_footer footer mt-5">
+              <div class="_layout">
                 <hr class="thin border-gray-light"/>
                 <nav>
                   <p><b>Dove</b>
@@ -140,30 +209,26 @@ source_url   : https://github.com/techie-joe/dove</pre>
 
 <a href="https://techie-joe.github.io/proto" target="_test">Proto</a>
                   </p>
-                </nav>
-              </article>
-            </main>
-            <footer class="_footer footer mt-5">
-              <div class="_layout">
-                <hr class="thin border-gray-light"/>
-                <p><b>Techie Joe's</b>
+                  <hr class="thin border-gray-light"/>
+                  <p><b>Techie Joe's</b>
 <i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i>
 
-<a href="https://techie-joe.github.io">Website</a>
+<a href="https://techie-joe.github.io" target="_techiejoes">Website</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="https://github.com/techie-joe">Profile</a>
+<a href="https://github.com/techie-joe" target="_github">Profile</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/nova/site/themejs">ThemeJs</a>
-                </p>
+<a href="/nova/site/themejs" target="_themejs">ThemeJs</a>
+                  </p>
+                </nav>
                 <hr class="thin border-gray-light"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/index.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -177,12 +242,12 @@ source_url   : https://github.com/techie-joe/dove</pre>
                   </svg></i></i></a></div>
         </div>
       </div>
+      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
+      <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.5726"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>anchors?.add();</script>
     </div>
-    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
-    <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3248"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>anchors?.add();</script>
   </body>
 </html>
