--- a/prime/404.html
+++ b/prime/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="_prime_html" lang="en-US"><!-- path   : prime/404.html -->
+<html class="_prime_layout" lang="en-US"><!-- path   : prime/404.html -->
   <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -8,14 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3249"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.5727"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
-            <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+            <header class="_header">
+              <div class="_layout">
+                <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+              </div>
+            </header>
             <nav class="_nav">
               <div class="_layout">
                 <p><b>Prime</b>
@@ -36,17 +40,19 @@
               </div>
             </nav>
             <main class="_main">
-              <article class="_article _layout">
-                <div class="flex" style="margin:1rem auto 3rem auto">
-                  <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
-                  <div class="f" style="padding:0 1rem">
-                    <h2>Oops! Nothing found</h2>
-                    <p>The content you are looking for is not here.</p>
+              <article class="_article">
+                <div class="_layout">
+                  <div class="flex" style="margin:1rem auto 3rem auto">
+                    <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
+                    <div class="f" style="padding:0 1rem">
+                      <h2>Oops! Nothing found</h2>
+                      <p>The content you are looking for is not here.</p>
+                    </div>
                   </div>
+                  <hr class="thin border-gray-light"/>
+                  <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
+                  </p>
                 </div>
-                <hr class="thin border-gray-light"/>
-                <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
-                </p>
               </article>
             </main>
             <footer class="_footer footer mt-5">
@@ -64,12 +70,12 @@
                   </svg></i></i></a></div>
         </div>
       </div>
+      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
+      <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.5727"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>anchors?.add();</script>
     </div>
-    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
-    <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3249"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>anchors?.add();</script>
   </body>
 </html>
