--- a/prime/index.html
+++ b/prime/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="_prime_html" lang="en-US"><!-- path   : prime/index.html -->
+<html class="_prime_layout" lang="en-US"><!-- path   : prime/index.html -->
   <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -8,14 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3249"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.5727"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
-            <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+            <header class="_header">
+              <div class="_layout">
+                <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+              </div>
+            </header>
             <nav class="_nav">
               <div class="_layout">
                 <p><b>Prime</b>
@@ -36,43 +40,45 @@
               </div>
             </nav>
             <main class="_main">
-              <article class="_article _layout">
-                <style>
-                  .hero-box-2 {
-                    margin:.5rem 0;
-                    padding: 1px 2rem 3rem;
-                    background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
-                    color: #fff;
-                  }
-                  .hero-box-2 hr { border-color: #cdb8e3 }
-                  .hero-box-2 .site-description {
-                    margin-left:5.3rem;
-                    font-weight: 300;
-                    font-size: 1.1em;
-                    color: #000;
-                  }
-                  ._dark .hero-box-2 .site-description { color: #fff }
-                </style>
-                <div class="hero-box-2 box">
-                  <h1 id="_hero-title">⚒️ Heroic Title</h1>
-                  <p class="site-description">Your site's description or mission statement.</p>
+              <article class="_article">
+                <div class="_layout">
+                  <style>
+                    .hero-box-2 {
+                      margin:.5rem 0;
+                      padding: 1px 2rem 3rem;
+                      background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
+                      color: #fff;
+                    }
+                    .hero-box-2 hr { border-color: #cdb8e3 }
+                    .hero-box-2 .site-description {
+                      margin-left:5.3rem;
+                      font-weight: 300;
+                      font-size: 1.1em;
+                      color: #000;
+                    }
+                    ._dark .hero-box-2 .site-description { color: #fff }
+                  </style>
+                  <div class="hero-box-2 box">
+                    <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                    <p class="site-description">Your site's description or mission statement.</p>
+                  </div>
+                  <hr/>
+                  <style>
+                    .hero-box-1 { padding:0 }
+                    .hero-box-1 .site-description {
+                      margin-left:5.3rem;
+                      font-weight: 300;
+                      font-size: 1.1em;
+                    }
+                    .hero-box-1 .hero-hr { margin-top:45px }
+                  </style>
+                  <div class="hero-box-1 box">
+                    <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                    <p class="site-description">Your site's description or mission statement.</p>
+                    <hr class="hero-hr"/>
+                  </div>
+                  <p><code>// content for : Home</code></p>
                 </div>
-                <hr/>
-                <style>
-                  .hero-box-1 { padding:0 }
-                  .hero-box-1 .site-description {
-                    margin-left:5.3rem;
-                    font-weight: 300;
-                    font-size: 1.1em;
-                  }
-                  .hero-box-1 .hero-hr { margin-top:45px }
-                </style>
-                <div class="hero-box-1 box">
-                  <h1 id="_hero-title">⚒️ Heroic Title</h1>
-                  <p class="site-description">Your site's description or mission statement.</p>
-                  <hr class="hero-hr"/>
-                </div>
-                <p><code>// content for : Home</code></p>
               </article>
             </main>
             <footer class="_footer footer mt-5">
@@ -82,7 +88,7 @@
                 <hr class="thin border-gray-light"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/index.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -96,12 +102,12 @@
                   </svg></i></i></a></div>
         </div>
       </div>
+      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
+      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
+      <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.5727"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+      <script>anchors?.add();</script>
     </div>
-    <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
-    <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3249"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>anchors?.add();</script>
   </body>
 </html>
